<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/img_sitio"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:src="@android:drawable/ic_menu_camera" />

        <EditText
            android:id="@+id/txt_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/img_sitio"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/img_sitio"
            android:hint="@string/txt_nombre" />

        <EditText
            android:id="@+id/txt_ubicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/img_sitio"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/img_sitio"
            android:hint="@string/txt_ubi" />

        <View
            android:id="@+id/linea_superior"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_below="@id/img_sitio"
            android:layout_marginTop="8dp"
            android:background="@color/morado"
            />

        <TextView
            android:id="@+id/txt_informacionTit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_sitio"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-black"

            android:gravity="center"
            android:text="@string/txt_informacion"
            android:textColor="@color/purple_500"
            android:textSize="26sp" />

        <EditText
            android:id="@+id/txt_informacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_informacionTit"
            android:hint="@string/txt_detalle"
            android:textSize="16dp" />
        <View
            android:id="@+id/linea_inferior"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_below="@id/txt_informacion"
            android:layout_marginTop="8dp"
            android:background="@color/morado"
            />

        <TextView
            android:id="@+id/txt_valoracion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linea_inferior"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/txt_val"
            android:textColor="@color/purple_500"
            android:textSize="20sp" />

        <RatingBar
            android:id="@+id/rtb_valoracion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_valoracion"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:progressTint="@color/amarillo" />

        <Button
            tools:ignore="UnknownId"
            android:id="@+id/btn_guardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="6dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="6dp"
            android:text="@string/btn_guardar"
            android:layout_below="@id/rtb_valoracion"
            />
    </RelativeLayout>
    </ScrollView>
</layout>