<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="SitioTuristico"
            type="com.example.sitios_turisticos.SitioTuristico" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetalleSitio">

        <ImageView
            android:id="@+id/img_perfil"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/txt_nonbreSitio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/txt_nombre1"
            android:padding="16dp"
            android:text="@{SitioTuristico.nombre}"
            android:textAlignment="center"
            android:textColor="#754444"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_perfil" />

        <TextView
            android:id="@+id/txt_tituloUbi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:padding="8dp"
            android:text="@string/txt_ubi2"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_nonbreSitio" />

        <TextView
            android:id="@+id/txt_tituloUbi2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:padding="8dp"
            android:text="@string/txt_informacion1"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_ubicacion" />

        <TextView
            android:id="@+id/txt_ubicacion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/txt_mostrar1"
            android:padding="8dp"
            android:text="@{SitioTuristico.ubicacion}"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_tituloUbi" />

        <TextView
            android:id="@+id/txt_informacion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/txt_mostrinfor"
            android:padding="8dp"
            android:text="@{SitioTuristico.informacion}"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_tituloUbi2" />

        <TextView
            android:id="@+id/txt_valoracion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/txt_val2"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_informacion" />

        <RatingBar
            android:id="@+id/rtb_valoracion"
            android:rating="@{SitioTuristico.valoracion}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:isIndicator="true"
            android:progressTint="#FFEB3B"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_valoracion" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>